package main.java.com.lecteur;

public interface Readable {
  public String lireEndroit();

  public String lireEnvers();

  public String lirePalindrome();
}
