@startuml
title Lecteur

top to bottom direction

interface Readable {
  + lireEndroit(): String
  + lireEnvers(): String
  + lirePalindrome(): String
}

Readable <|.. CustomFile

abstract CustomFile {
  # file: File
  # text: String[]
  + lireEndroit(): String
  + lireEnvers(): String
  + lirePalindrome(): String 
  # {abstract} decode(): void
}

package "Files" {
  class TextFile {
    # decode(): void
  }
  class CsvFile {
    # decode(): void
  }
  class JsonFile  {
    # decode(): void
  }
}

CustomFile <|-- TextFile
CustomFile <|-- CsvFile
CustomFile <|-- JsonFile

@enduml
